# learn-actions

./: Dockerfile  DockerfileOdoo  pyproject.toml
.github/workflows/: docker-image.yml
